Remove: payment brackend feature
