# backend/src/dtos/update/updatePagamento.dto.ts
@@ -1,5 +1,0 @@
-import { CreatePagamentoDTO } from '../create/createPagamento.dto'
-
-export type UpdatePagamentoDTO = Partial<CreatePagamentoDTO> & {
-  ativo?: true
-}
