# backend/src/swagger.json
@@ -526,83 +526,6 @@
         }
       }
     },
-    "/pagamentos": {
-      "get": {
-        "summary": "Listar todos os pagamentos",
-        "operationId": "getPagamentos",
-        "responses": {
-          "200": {
-            "description": "Lista de pagamentos",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/PagamentoResponseDTO"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "summary": "Criar um novo pagamento",
-        "operationId": "createPagamento",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreatePagamentoDTO"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Pagamento criado com sucesso",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PagamentoResponseDTO"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/pagamentos/{cod}": {
-      "parameters": [
-        {
-          "name": "cod",
-          "in": "path",
-          "required": true,
-          "schema": {
-            "type": "string",
-            "format": "uuid",
-            "example": "8e07cb00-089a-4e0f-b366-3889bf2c61db"
-          }
-        }
-      ],
-      "get": {
-        "summary": "Obter um pagamento pelo código",
-        "operationId": "getPagamentoById",
-        "responses": {
-          "200": {
-            "description": "Pagamento encontrado",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PagamentoResponseDTO"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/tiposBrinquedos": {
       "get": {
         "summary": "Listar todos os tipos de brinquedos",
@@ -1203,80 +1126,6 @@
           },
           "brinquedosLocados": {
             "$ref": "#/components/schemas/BrinquedoLocadoResponseDTO"
-          }
-        }
-      },
-      "CreatePagamentoDTO": {
-        "type": "object",
-        "required": ["cpf_cliente", "cod_locacao", "valor_pagamento"],
-        "properties": {
-          "cpf_cliente": {
-            "type": "string",
-            "pattern": "^[0-9]{11}$",
-            "example": "12345678901"
-          },
-          "cod_locacao": {
-            "type": "string",
-            "format": "uuid",
-            "example": "8e07cb00-089a-4e0f-b366-3889bf2c61db"
-          },
-          "valor_pagamento": {
-            "type": "number",
-            "example": 200.75
-          }
-        },
-        "additionalProperties": false
-      },
-      "UpdatePagamentoDTO": {
-        "type": "object",
-        "properties": {
-          "cpf_cliente": {
-            "type": "string",
-            "pattern": "^[0-9]{11}$"
-          },
-          "cod_locacao": {
-            "type": "string",
-            "format": "uuid",
-            "example": "8e07cb00-089a-4e0f-b366-3889bf2c61db"
-          },
-          "valor_pagamento": {
-            "type": "number"
-          },
-          "ativo": {
-            "type": "boolean"
-          }
-        },
-        "additionalProperties": false
-      },
-      "PagamentoResponseDTO": {
-        "type": "object",
-        "properties": {
-          "cod": {
-            "type": "string",
-            "format": "uuid",
-            "example": "8e07cb00-089a-4e0f-b366-3889bf2c61db"
-          },
-          "cpf_cliente": {
-            "type": "string",
-            "pattern": "^[0-9]{11}$"
-          },
-          "cod_locacao": {
-            "type": "string",
-            "format": "uuid",
-            "example": "8e07cb00-089a-4e0f-b366-3889bf2c61db"
-          },
-          "data_pagamento": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "valor_pagamento": {
-            "type": "number"
-          },
-          "valor_locacao": {
-            "type": "number"
-          },
-          "ativo": {
-            "type": "boolean"
           }
         }
       },
